# Content-Enrichment-Platform

./: .env.example  .gitignore  main.py  pyproject.toml
data/golden/: LABELING_GUIDELINES.md  eval_report_v1.md  eval_report_v2.md  eval_report_v3.md  eval_report_v4.md  eval_report_v5.md  eval_set.jsonl  golden.jsonl  labeling_queue.jsonl  pilot_queue.jsonl  pilot_set.jsonl  regression_set.jsonl
src/enrichment/: client.py  enricher.py  validator.py
src/enrichment/prompts/: v1.py  v2.py  v3.py  v4.py  v5.py
src/evaluation/: enrich_eval_set.py  hallucination.py  label_tool.py  metrics.py  report.py  sample_pilot.py  split_golden.py
src/ingestion/: feeds.py  ingest.py  normalizer.py  rss_fetcher.py  runner.py
src/pipeline/: checkpointer.py  pipeline.py  runner.py
src/schemas/: enrichment.py  episode.py
