[project]
name = "content-enrichment-platform"
version = "0.1.0"
description = "Production-grade podcast content enrichment pipeline with LLM extraction, evaluation, distillation, and versioned API"
readme = "README.md"
requires-python = ">=3.13.4"
dependencies = [
    # Pipeline
    "apache-beam[gcp]>=2.55.0",
    # LLM + structured output
    "anthropic>=0.40.0",
    "instructor>=1.6.0",
    # Data schemas
    "pydantic>=2.0.0",
    # Ingestion
    "feedparser>=6.0.0",
    "langdetect>=1.0.9",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    # Evaluation
    "bert-score>=0.3.13",
    "scikit-learn>=1.4.0",
    # Distillation
    "transformers>=4.40.0",
    "torch>=2.3.0",
    "sentence-transformers>=3.0.0",
    # RAG knowledge base
    "faiss-cpu>=1.8.0",
    "wikipedia-api>=0.6.0",
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "redis[hiredis]>=5.0.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
